deploy: e35a2481defd5b723e3af072b1ab2765d5e7c049

--- a/css/style.css
+++ b/css/style.css
@@ -480,13 +480,11 @@ body {
   height: 100%;
   background-color: #fff;
   color: #383838;
-  font-display: swap;
   font-weight: 400;
   font-size: 14px;
   font-family: "Menlo", "Meslo LG", monospace;
   line-height: 1.725;
   text-rendering: geometricPrecision;
-  flex: 1;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
 }
@@ -691,9 +689,15 @@ body {
     top: 77px;
     right: 1rem;
     display: inline-block;
+    text-align: center;
   }
   #header #nav ul.responsive li {
     display: block;
+  }
+  #header #nav ul a[aria-label="Menu"] {
+    display: inline-block;
+    min-width: 48px;
+    min-height: 48px;
   }
   #header #nav li:not(:first-child) {
     padding-top: 1rem;
@@ -1656,4 +1660,7 @@ code {
 }
 .highlight .line {
   height: 22px;
+}
+#header-post #actions {
+  direction: ltr !important;
 }
